@@ -18,6 +18,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - pbs_mom on Darwin (OS X) no longer depends on libkvm  (now works on all
       versions without need to re-enable /dev/kmem on newer PPC or all x86
       versions)
+  e - added PBS_SERVER env variable for job scripts
 
 2.1.7
   b - fix bison syntax error in Parser.y
